Configured Rollup to generate both CommonJS and ES Module exports in the `dist` folder.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "use-in-viewport-react",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A React hook to detect if an element is in the viewport",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && rollup -c",
     "publish": "npm run build && npm publish"
   },
   "keywords": [
@@ -35,9 +35,14 @@
     "dist"
   ],
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.2",
+    "@rollup/plugin-node-resolve": "^16.0.0",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "eslint": "^9.20.1",
+    "rollup": "^4.34.6",
+    "tslib": "^2.8.1",
     "typescript": "^5.7.3"
   }
 }
